left align fix

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@
  #leftPane{
    background-color:antiquewhite;
    width: 20%;
+   text-align: left;
    padding: 20px;
    border: '10px solid rgba(0, 0, 0, 0.05)'
  }
